[package]
name = "curryrs"
version = "0.2.0"
authors = ["Michael Gattozzi <mgattozzi@gmail.com>"]
description = "Utilities making Rust/Haskell FFI easier"
documentation = "https://docs.rs/curryrs/"
homepage = "https://github.com/mgattozzi/curryrs"
repository = "https://github.com/mgattozzi/curryrs"
readme = "README.md"
keywords = ["FFI", "Haskell"]
license = "MIT/Apache-2.0"
links = "htest"
build = "build.rs"

# These are needed for the Haskell source code
# but are dead weight for the Rust Package
exclude = [
    "/rtest",
    "/haskell-tests",
    "/Setup.hs",
    "/stack.yaml",
    "/curryrs.cabal",
    "/Makefile",
    "/htest"
]

[workspace]
members = ["rtest", "hrgen", "hrgen/hs-type-parser"]

[dependencies]
libc = "0.2"

[features]
# Features available for choosing alternative
# Runtime libraries for Haskell. By default it
# is the non-threaded non-debug version
threaded = []
threaded_l = []
threaded_debug = []
