Name:           concordium-crypto
version:         0.1
Synopsis:       Crypto infrastructure for Concordium block chain
Description: 
License:        BSD3
Author:         Concordium.com
Stability:      Experimental
Cabal-Version:       >=1.18
Build-Type:     Custom

custom-setup
  setup-depends:
    base  >= 4.7,
    Cabal >= 2.2,
    directory >= 1.3

source-repository head
  type: git
  location: https://gitlab.com/Concordium/crypto

Library
  default-language: Haskell2010
  default-extensions:      ForeignFunctionInterface

  hs-source-dirs: haskell-src
  Exposed-modules: Concordium.Crypto.SHA256	
                   Concordium.Crypto.SHA224	
                   Concordium.Crypto.Ed25519Signature
                   Concordium.Crypto.BlockSignature
                   Concordium.Crypto.SignatureScheme
                   Concordium.Crypto.AccountSignatureSchemes
                   Concordium.Crypto.PedersenScheme
                   Concordium.Crypto.VRF
                   Concordium.Crypto.PRF
                   Data.FixedByteString
                   Concordium.ID.Attributes
                   Concordium.ID.Types
                   Concordium.ID.Account

  Other-modules:   Concordium.Crypto.ByteStringHelpers
  Build-depends:  base >=4.7
                , bytestring >=0.10
                , cereal >=0.5.7
                , hashable >= 1.0.1.1
                , random >= 1.1
                , stringbuilder >=0.5.0
                , containers >= 0.5.11.0 
                , time       >= 1.7
                , random-bytestring >= 0.1.3.0
                , base58string >= 0.10.0
                , QuickCheck >= 2.10
                , vector >= 0.12

  extra-libraries: ec_vrf_ed25519
                   sha_2, 
                   eddsa_ed25519,
                   dodis_yampolskiy_prf
                   pedersen_scheme

Test-Suite tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: haskell-tests
  build-depends:    hspec >= 2.5
                    , QuickCheck >= 2.10
                    , hspec-expectations >= 0.8
                    , base >= 4.7
                    , concordium-crypto
                    , bytestring >=0.10
                    , cereal >=0.5.7
                    , random >= 1.1
  other-modules:
   ConcordiumTests.Crypto.SHA256
   ConcordiumTests.Crypto.SHA224
   ConcordiumTests.Crypto.Ed25519Signature
   ConcordiumTests.Crypto.VRF

Executable perf-test
  main-is: Perf.hs
  hs-source-dirs: haskell-tests
  build-depends: base >= 4.7
               , concordium-crypto
               , bytestring >= 0.10
               , criterion >= 1.5.4
  other-modules:
    PerformanceTests.Ed25519Perf
    PerformanceTests.SHA256Perf
