[package]
name = "send"
version = "0.1.0"
authors = ["Concordium AG <info@concordium.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]

std = ["concordium-std/std"]

[dependencies]
byteorder = "1.3"

[dependencies.concordium-std]
git = "https://github.com/Concordium/concordium-rust-smart-contracts.git"
branch = "main"
default-features = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
# Don't unwind on panics, just trap.
panic = "abort"
