[package]
name = "hrgen"
version = "0.1.0"
authors = ["Michael Gattozzi <mgattozzi@gmail.com>"]
description = "Create Haskell or Rust bindings automagically"
documentation = "https://github.com/mgattozzi/curryrs/hrgen"
homepage = "https://github.com/mgattozzi/curryrs"
repository = "https://github.com/mgattozzi/curryrs"
readme = "README.md"
keywords = ["FFI", "Haskell"]
license = "MIT/Apache-2.0"

[dependencies]
clap = "^2.13"
hs-type-parser = { version = "0.1", path = "hs-type-parser" }
