name:                htest
version:             0.1.0.0
synopsis:            Test libraries for FFI from Haskell to Rust
description:         Please see README.md
license:             OtherLicense
license-files:       LICENSE-MIT, LICENSE-APACHE
author:              Michael Gattozzi
maintainer:          mgattozzi@gmail.com
copyright:           2016 Michael Gattozzi
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
                     , ../src
  exposed-modules:     Lib
  other-modules:       Curryrs.Types
  other-extensions:    ForeignFunctionInterface
  ghc-options:         -dynamic -fPIC -shared -o libhtest.so
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
